--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "express": "^4.18.2",
+    "idb-keyval": "^6.2.1",
     "ng-zorro-antd": "^17.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -49,6 +50,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "ng-packagr": "^17.3.0",
     "prettier": "^3.2.5",
     "typescript": "~5.4.2"
   }
