--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -112,7 +112,10 @@
         "plugin:@angular-eslint/template/recommended",
         "plugin:@angular-eslint/template/accessibility"
       ],
-      "rules": {}
+      "rules": {
+        "@angular-eslint/template/interactive-supports-focus": "off",
+        "@angular-eslint/template/click-events-have-key-events": "off"
+      }
     },
     {
       "files": [
