--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "console",
   "version": "0.0.0-NOT-USED",
   "scripts": {
-    "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "build:library": "ng build library",
+    "build": "ng b --configuration production",
+    "build:library": "ng b library",
     "serve:ssr:console": "node dist/console/server/server.mjs"
   },
   "private": false,
@@ -41,6 +40,7 @@
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "7.2.0",
     "@typescript-eslint/parser": "7.2.0",
+    "cropperjs": "^1.6.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
