--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "@antv/g2plot": "^2.4.31",
+    "cron-parser": "^4.9.0",
     "express": "^4.18.2",
     "idb-keyval": "^6.2.1",
     "joi": "^17.12.2",
