--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,9 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
+  "ignorePatterns": ["projects/**/*"],
   "overrides": [
     {
-      "files": [
-        "*.ts"
-      ],
+      "files": ["*.ts"],
       "extends": [
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
@@ -15,10 +11,7 @@
         "plugin:@angular-eslint/template/process-inline-templates",
         "plugin:prettier/recommended"
       ],
-      "plugins": [
-        "prettier",
-        "import"
-      ],
+      "plugins": ["prettier", "import"],
       "rules": {
         "@angular-eslint/directive-selector": [
           "error",
@@ -32,11 +25,7 @@
           "error",
           {
             "type": "element",
-            "prefix": [
-              "app",
-              "x",
-              "v"
-            ],
+            "prefix": "app",
             "style": "kebab-case"
           }
         ],
@@ -79,16 +68,7 @@
               "caseInsensitive": false
             },
             "newlines-between": "always",
-            "groups": [
-              "external",
-              "builtin",
-              "internal",
-              [
-                "parent",
-                "sibling",
-                "index"
-              ]
-            ],
+            "groups": ["external", "builtin", "internal", ["parent", "sibling", "index"]],
             "pathGroups": [
               {
                 "pattern": "{@angular/**,rxjs,rxjs/operators}",
@@ -104,13 +84,8 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended",
-        "plugin:@angular-eslint/template/accessibility"
-      ],
+      "files": ["*.html"],
+      "extends": ["plugin:@angular-eslint/template/recommended", "plugin:@angular-eslint/template/accessibility"],
       "rules": {
         "@angular-eslint/template/interactive-supports-focus": "off",
         "@angular-eslint/template/click-events-have-key-events": "off",
@@ -118,15 +93,9 @@
       }
     },
     {
-      "files": [
-        "*.html"
-      ],
-      "excludedFiles": [
-        "*inline-template-*.component.html"
-      ],
-      "extends": [
-        "plugin:prettier/recommended"
-      ],
+      "files": ["*.html"],
+      "excludedFiles": ["*inline-template-*.component.html"],
+      "extends": ["plugin:prettier/recommended"],
       "rules": {
         "prettier/prettier": [
           "error",
