--- a/angular.json
+++ b/angular.json
@@ -35,12 +35,7 @@
               }
             ],
             "styles": ["src/styles.less"],
-            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast"],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "allowedCommonJsDependencies": ["size-sensor", "d3-regression", "fmin", "pdfast"]
           },
           "configurations": {
             "production": {
@@ -80,22 +75,6 @@
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n"
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
-            "tsConfig": "tsconfig.spec.json",
-            "inlineStyleLanguage": "less",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
-            "styles": ["./node_modules/ng-zorro-antd/ng-zorro-antd.min.css", "src/styles.less"],
-            "scripts": []
-          }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
