--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ng serve",
-    "build": "ng b --configuration production",
-    "serve:ssr:dashboard": "node dist/dashboard/server/server.mjs",
+    "build": "ng build",
     "lint": "ng lint"
   },
   "dependencies": {
@@ -15,11 +14,8 @@
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "@angular/ssr": "^18.2.2",
     "@ngx-pwa/local-storage": "^18.0.0",
-    "express": "^4.18.2",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -34,8 +30,6 @@
     "@angular-eslint/template-parser": "18.3.1",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
@@ -43,12 +37,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "jasmine-core": "~5.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.3.3",
     "typescript": "~5.5.2"
   }
