--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@angular/service-worker": "^18.2.0",
     "@ngx-pwa/local-storage": "^18.0.0",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
