--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
   "name": "litho",
-  "version": "1.0.0",
+  "version": "20.0.0",
   "scripts": {
-    "start": "ng serve --configuration development",
+    "dev": "ng serve",
     "build": "ng build",
     "lint": "ng lint"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "~19.2.4",
-    "@angular/common": "~19.2.4",
-    "@angular/compiler": "~19.2.4",
-    "@angular/core": "~19.2.4",
-    "@angular/forms": "~19.2.4",
-    "@angular/platform-browser": "~19.2.4",
-    "@angular/platform-browser-dynamic": "~19.2.4",
-    "@angular/router": "~19.2.4",
-    "@angular/service-worker": "~19.2.4",
-    "@ngx-pwa/local-storage": "^19.0.0",
-    "ng-zorro-antd": "~19.2.1",
+    "@angular/common": "^20.3.0",
+    "@angular/compiler": "^20.3.0",
+    "@angular/core": "^20.3.0",
+    "@angular/forms": "^20.3.0",
+    "@angular/platform-browser": "^20.3.0",
+    "@angular/router": "^20.3.0",
+    "@angular/service-worker": "^20.3.0",
+    "@ngx-pwa/local-storage": "^20.0.0",
+    "ng-zorro-antd": "^20.3.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~19.2.5",
-    "@angular/cli": "~19.2.5",
-    "@angular/compiler-cli": "~19.2.4",
-    "angular-eslint": "19.3.0",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.4.2",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "8.18.0"
+    "@angular/build": "^20.3.3",
+    "@angular/cli": "^20.3.3",
+    "@angular/compiler-cli": "^20.3.0",
+    "angular-eslint": "20.3.0",
+    "eslint": "^9.35.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "less": "^4.2.0",
+    "prettier": "^3.6.2",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "8.40.0"
   }
 }
