--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,6 @@
   "compileOnSave": false,
   "compilerOptions": {
     "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
@@ -12,21 +11,32 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
-    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "preserve",
     "paths": {
-      "@common": ["src/common/index.ts"],
-      "@common/*": ["src/common/*"]
+      "@shared": ["src/shared/public-api.ts"],
+      "@shared/models": ["src/shared/models"],
+      "@shared/models/*": ["src/shared/models/*"],
+      "@shared/apis": ["src/shared/apis"],
+      "@shared/apis/*": ["src/shared/apis/*"],
+      "@shared/components/*": ["src/shared/components/*"],
+      "@shared/directives/*": ["src/shared/directives/*"],
+      "@shared/pipes/*": ["src/shared/pipes/*"]
     }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
+    "typeCheckHostBindings": true,
     "strictTemplates": true
-  }
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
