--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "litho",
   "version": "20.0.0",
   "scripts": {
-    "dev": "ng serve",
+    "dev:kain": "ng serve --configuration kain",
     "build": "ng build",
     "lint": "ng lint"
   },
@@ -25,6 +25,7 @@
     "@angular/build": "^20.3.3",
     "@angular/cli": "^20.3.3",
     "@angular/compiler-cli": "^20.3.0",
+    "@types/resize-observer-browser": "^0.1.11",
     "angular-eslint": "20.3.0",
     "eslint": "^9.35.0",
     "eslint-plugin-import": "^2.32.0",
