--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "target": "ES2022",
     "module": "preserve",
     "paths": {
+      "@env": ["src/environments/environment.ts"],
       "@shared": ["src/shared/public-api.ts"],
       "@shared/models": ["src/shared/models"],
       "@shared/models/*": ["src/shared/models/*"],
