--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,22 +16,39 @@
     "target": "ES2022",
     "module": "preserve",
     "paths": {
-      "@env": ["src/environments/environment.ts"],
-      "@shared": ["src/shared/public-api.ts"],
-      "@shared/models": ["src/shared/models"],
-      "@shared/models/*": ["src/shared/models/*"],
-      "@shared/apis": ["src/shared/apis"],
-      "@shared/apis/*": ["src/shared/apis/*"],
-      "@shared/components/*": ["src/shared/components/*"],
-      "@shared/directives/*": ["src/shared/directives/*"],
-      "@shared/pipes/*": ["src/shared/pipes/*"]
+      "@env": [
+        "src/environments/environment.ts"
+      ],
+      "@shared": [
+        "src/shared/public-api.ts"
+      ],
+      "@shared/models": [
+        "src/shared/models"
+      ],
+      "@shared/models/*": [
+        "src/shared/models/*"
+      ],
+      "@shared/apis": [
+        "src/shared/apis"
+      ],
+      "@shared/apis/*": [
+        "src/shared/apis/*"
+      ],
+      "@shared/components/*": [
+        "src/shared/components/*"
+      ],
+      "@shared/directives/*": [
+        "src/shared/directives/*"
+      ],
+      "@shared/pipes/*": [
+        "src/shared/pipes/*"
+      ]
     }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "typeCheckHostBindings": false,
     "strictTemplates": true
   },
   "files": [],
