--- a/package.json
+++ b/package.json
@@ -6,35 +6,36 @@
     "build": "ng build",
     "lint": "ng lint"
   },
-  "private": true,
+  "packageManager": "bun@1.3.5",
   "dependencies": {
-    "@angular/common": "^21.0.8",
-    "@angular/compiler": "^21.0.8",
-    "@angular/core": "^21.0.8",
-    "@angular/forms": "^21.0.8",
-    "@angular/platform-browser": "^21.0.8",
-    "@angular/router": "^21.0.8",
-    "@angular/service-worker": "^21.0.8",
-    "@ngx-pwa/local-storage": "^21.0.0",
-    "ng-zorro-antd": "^21.0.0",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.0",
+    "@angular/platform-browser": "^21.1.0",
+    "@angular/router": "^21.1.0",
+    "@angular/service-worker": "^21.1.0",
+    "@ngx-pwa/local-storage": "21.0.0",
+    "ng-zorro-antd": "^21.0.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.5",
-    "@angular/cli": "^21.0.5",
-    "@angular/compiler-cli": "^21.0.8",
-    "@types/resize-observer-browser": "^0.1.11",
+    "@angular-eslint/builder": "21.1.0",
+    "@angular/build": "^21.1.0",
+    "@angular/cli": "^21.1.0",
+    "@angular/compiler-cli": "^21.1.0",
+    "@eslint/js": "^9.39.1",
     "angular-eslint": "21.1.0",
-    "baseline-browser-mapping": "^2.9.14",
-    "eslint": "^9.35.0",
+    "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.1",
-    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-prettier": "^5.5.5",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "jsdom": "^27.1.0",
     "less": "^4.2.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.8.0",
     "typescript": "~5.9.2",
-    "typescript-eslint": "8.40.0"
+    "typescript-eslint": "8.47.0",
+    "vitest": "^4.0.8"
   }
 }
