feat: add animate.css for enhanced animations on login page; update form placeholders and labels

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,8 @@
               }
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/animate.css/animate.min.css"
             ]
           },
           "configurations": {
